namespaces/live.cloud-platform.service.justice.gov.uk/laa-data-stewardship-access-resources/00-namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: "laa-data-stewardship-access-resources"
  labels:
    cloud-platform.justice.gov.uk/is-production: "true"
    cloud-platform.justice.gov.uk/environment-name: "production"
    pod-security.kubernetes.io/enforce: restricted
  annotations:
    cloud-platform.justice.gov.uk/business-unit: "LAA"
    cloud-platform.justice.gov.uk/slack-channel: "laa-data-stewardship-access"
    cloud-platform.justice.gov.uk/application: "dstew-access-service"
    cloud-platform.justice.gov.uk/owner: "Access Data Stewardship: laa-dstew-access@justice.gov.uk"
    cloud-platform.justice.gov.uk/source-code: "https://github.com/ministryofjustice/laa-data-stewardship-access"
    cloud-platform.justice.gov.uk/team-name: "laa-data-stewardship-access-team"
    cloud-platform.justice.gov.uk/review-after: ""
